#686: Added Term object and queries